// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> should not render without items 1`] = `
<Section
  title="Headline"
/>
`;

exports[`<Section /> should render with a headline and items 1`] = `
<Section
  title="Headline"
>
  <Headline
    style={
      {
        "margin": "24px 20px 16px",
      }
    }
    tag="h2"
    text="Headline"
  >
    <h2
      className="sg-1e76cvh-root headline theme__headline"
      data-test-id="Headline"
      style={
        {
          "margin": "24px 20px 16px",
        }
      }
    >
      <Text
        acceptPlainTextWithPlaceholders={false}
        className={null}
        params={{}}
        role={null}
        string="Headline"
        transform={null}
      >
        Headline
      </Text>
    </h2>
  </Headline>
  <div
    className="sg-1sqpupb-list"
    data-test-id="more-section-list"
  >
    <MoreMenuItem
      className={null}
      href="/link/one"
      label="Item One"
      onClick={null}
      testId={null}
    >
      <Link
        className="sg-xorol2-root"
        href="/link/one"
        role="button"
      >
        <Text
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="Item One"
          transform={null}
        >
          Item One
        </Text>
      </Link>
    </MoreMenuItem>
    <MoreMenuItem
      className={null}
      href="/link/two"
      label="Item Two"
      onClick={null}
      testId={null}
    >
      <Link
        className="sg-xorol2-root"
        href="/link/two"
        role="button"
      >
        <Text
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="Item Two"
          transform={null}
        >
          Item Two
        </Text>
      </Link>
    </MoreMenuItem>
  </div>
</Section>
`;

exports[`<Section /> should render without a headline but items 1`] = `
<Section
  title=""
>
  <Headline
    style={
      {
        "margin": "24px 20px 16px",
      }
    }
    tag="h2"
    text=""
  />
  <div
    className="sg-1sqpupb-list"
    data-test-id="more-section-list"
  >
    <MoreMenuItem
      className={null}
      href="/link/one"
      label="Item One"
      onClick={null}
      testId={null}
    >
      <Link
        className="sg-xorol2-root"
        href="/link/one"
        role="button"
      >
        <Text
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="Item One"
          transform={null}
        >
          Item One
        </Text>
      </Link>
    </MoreMenuItem>
    <MoreMenuItem
      className={null}
      href="/link/two"
      label="Item Two"
      onClick={null}
      testId={null}
    >
      <Link
        className="sg-xorol2-root"
        href="/link/two"
        role="button"
      >
        <Text
          acceptPlainTextWithPlaceholders={false}
          className={null}
          params={{}}
          role={null}
          string="Item Two"
          transform={null}
        >
          Item Two
        </Text>
      </Link>
    </MoreMenuItem>
  </div>
</Section>
`;
